# clipboard_manager

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_app.py
requirements/: base.txt  linux.txt  test.txt  windows.txt
resources/: __init__.py
resources/icons/: README.md
resources/styles/: __init__.py  main.qss
resources/styles/themes/: dark_amoled.qss  dark_solarized.qss  dark_win11.qss  dracula.qss  gruvbox.qss  nord.qss  onedark_pro.qss  vespera.qss
scripts/: __init__.py  clean_pid.sh  create_deb.py  install_linux.sh
src/: __init__.py  main.py
src/core/: __init__.py  application.py  clipboard_watcher.py  content_manager.py  database.py  hotkey_manager.py  migration_manager.py  migrations.py  search_engine.py
src/startup/: __init__.py  lifecycle.py  setup.py
src/ui/: __init__.py  about_popup.py  popup_window.py  settings_window.py  styles.py  system_tray.py
src/ui/popup_window/: __init__.py  clipboard_item.py  popup_window.py  search_bar.py
src/ui/settings_window/: __init__.py  compact_combo_box.py  settings_window.py
src/utils/: __init__.py  autostart.py  config.py  image_utils.py  logging_config.py  memory_manager.py  memory_optimizer.py  process_utils.py  qss_loader.py  qt_setup.py  single_instance.py
