[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b1clip"
version = "1.0.0"
description = "Modern clipboard history manager with global hotkey support"
authors = [
    {name = "Falcol", email = "falcol@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["clipboard", "history", "manager", "gui", "qt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.5.0",
    "appdirs>=1.4.0",
    "setproctitle>=1.3.0",
    "pynput>=1.7.0",
    "keyboard>=0.13.5",
    "pillow>=9.5.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
linux = [
    "evdev>=1.6.0",
    "python-xlib>=0.33",
    "plyer>=2.1.0",
]
windows = [
    "pywin32>=306",
    "wmi>=1.5.1",
]
dev = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "iniconfig>=2.0.0",
    "pluggy>=1.3.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-qt>=4.2.0",
    "iniconfig>=2.0.0",
    "pluggy>=1.3.0",
]

[project.scripts]
b1clip = "src.main:main"

[project.urls]
Homepage = "https://github.com/falcol/clipboard_manager"
Repository = "https://github.com/falcol/clipboard_manager"
Issues = "https://github.com/falcol/clipboard_manager/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E302", "E305", "E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
